--- a/favorite.html
+++ b/favorite.html
@@ -22,8 +22,26 @@
             </ul>
         </nav>
     </header>
-
     
+
+<h1>FAVORITOS</h1>
+<ul>
+    <li>cars</li>
+    <li>el encargado</li>
+    <li>caracortada</li>
+    <li>elite</li>
+    <li>son como niños</li>
+</ul>
+<section>
+        <img src="./img/peliculas/alpachino.jpeg" alt="Imagen de Alpachino">
+        <H2> Caracortada </H2>
+        <p>Calificación</p>
+        <p> 1982 2h 49 min</p>
+        <p>En su ascenso en el negocio del narcotráfico de Miami, un gánster cubano se sumerge en un modulo de adicción, obsesión y crueldad y paga un alto precio </p>
+        <p>Genero: Acción</p>
+        <a href="#">Favoritos</a>
+  
+</section>      
     <footer>
         <ul>
             <li class="footerlist">Beltrán Caceras</li>
