Hice el punto 6

--- a/detalle-generos.html
+++ b/detalle-generos.html
@@ -23,6 +23,32 @@
             </ul>
         </nav>
     </header>
+    
+    <section>
+        <h1> Películas de Acción </h1>
+        <ul>
+            <li>
+                <h2>Oppenhaimer</h2>
+                <img src="./img/peliculas/oppenhaimer.jpeg" alt="Imagen de Oppenhaimer">
+            </li>
+            <li> 
+                <h2>Un espía y medio</h2>
+                <img src="./img/peliculas/un espia y medio.jpeg" alt="Imagen de un Espia y Medio">
+            </li>
+            <li> 
+                <h2>El lobo de Wallstreet</h2>
+                <img src="./img/peliculas/el lobo.jpeg" alt="Imagen de el Lobo">
+            </li>
+            <li> 
+                <h2>Caracortada</h2>
+                <img src="./img/peliculas/alpachino.jpeg" alt="Imagen de Alpachino">
+            </li>
+            <li> 
+                <h2>Son como niños</h2>
+                <img src="./img/peliculas/son como ninos.jpeg" alt="Imagen de Son como niños">
+            </li>
+        </ul>
+    </section>
 
     
     <footer>
