--- a/generos.html
+++ b/generos.html
@@ -23,7 +23,25 @@
         </nav>
     </header>
 
-    
+    <section>
+        <h2>Peliculas</h2>
+        <ul>
+            <li><a href="./detalle-movie.html"></a>Accion</li>
+            <li><a href="./detalle-movie.html"></a>Terror</li>
+            <li><a href="./detalle-movie.html"></a>Comedia</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>series</h2>
+        <ul>
+            <li><a href="./detalle-serie.html"></a>Accion</li>
+            <li><a href="./detalle-serie.html"></a>Terror</li>
+            <li><a href="./detalle-serie.html"></a>Comedia</li>
+            
+        </ul>
+    </section>
+
     <footer>
         <ul>
             <li class="footerlist">Beltrán Caceras</li>
