--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <header>
         <nav>
-            <img src="./img/setflix.png" alt="The stream setflix">
+            <img class="logo" src="./img/setflix.png" alt="The stream setflix">
 
             <form class="formulario" action="search-results.html" method="get">
                 <input type="text" name="buscar" id="" value="" placeholder="Buscar...">
@@ -23,7 +23,8 @@
             </ul>
         </nav>
     </header>
-    <div>
+
+    <div class="padre-articulos">
         <section>
             <h2>Películas</h2>
             <article><a href="./detalle-movie.html"></a>
@@ -56,9 +57,8 @@
                 <h3>Un espía y medio</h3>
                 <p>Fecha de estreno: 18 de agosto de 2016</p>
             </article>
-
         </section>
-        
+
         <section>
             <h2>Series</h2>
             <article><a href="./detalle-serie.html"></a>
@@ -90,9 +90,8 @@
                 <h3>Suits</h3>
                 <p>Fecha de estreno: 23 de junio de 2011</p>
             </article>
-
-
         </section>
+
         <section>
             <h2>Películas populares</h2>
             <article><a href="./detalle-movie.html"></a>
