hice el css del header y footer

--- a/detalle-generos.html
+++ b/detalle-generos.html
@@ -10,7 +10,7 @@
     
     <header>
         <nav>
-            <img src="./img/setflix.png" alt="The stream setflix">
+            <img id="logotheSS" src="./img/setflix.png" alt="The stream setflix">
 
             <form class="formulario" action="search-results.html" method="get">
                 <input type="text" name="buscar" id="" value="" placeholder="Buscar...">
@@ -52,7 +52,7 @@
 
     
     <footer>
-        <ul>
+        <ul class="ul-footer">
             <li class="footerlist">Beltrán Caceras</li>
             <li class="footerlist">Mariano Vila</li>
             <li class="footerlist">Joaquin Rosas Zuiani</li>
