--- a/favorite.html
+++ b/favorite.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <img src="./img/setflix.png" alt="The stream setflix">
+            <img id="logotheSS" src="./img/setflix.png" alt="The stream setflix">
 
             <form class="formulario" action="search-results.html" method="get">
                 <input type="text" name="buscar" id="" value="" placeholder="Buscar...">
@@ -43,7 +43,7 @@
   
 </section>      
     <footer>
-        <ul>
+        <ul class="ul-footer">
             <li class="footerlist">Beltrán Caceras</li>
             <li class="footerlist">Mariano Vila</li>
             <li class="footerlist">Joaquin Rosas Zuiani</li>
