--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <header>
         <nav>
-            <img class="logo" src="./img/setflix.png" alt="The stream setflix">
+            <img id="logotheSS" class="logo" src="./img/setflix.png" alt="The stream setflix">
 
             <form class="formulario" action="search-results.html" method="get">
                 <input type="text" name="buscar" id="" value="" placeholder="Buscar...">
@@ -128,7 +128,7 @@
 
     
     <footer>
-        <ul>
+        <ul class="ul-footer">
             <li class="footerlist">Beltrán Caceras</li>
             <li class="footerlist">Mariano Vila</li>
             <li class="footerlist">Joaquin Rosas Zuiani</li>
