--- a/index.html
+++ b/index.html
@@ -25,100 +25,100 @@
     </header>
 
     <div class="padre-articulos">
-        <section>
-            <h2>Películas</h2>
-            <article><a href="./detalle-movie.html"></a>
+        <section class="section-home">
+            <h2 class="titulo-section">Películas</h2>
+            <article class="article-home"><a href="./detalle-movie.html"></a>
                 <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
                 <h3>Al pachino</h3>
                 <p>Fecha de estreno: 8 de enero de 1976</p>
             </article>
 
-            <article><a href="./detalle-movie.html"></a>
+            <article class="article-home"><a href="./detalle-movie.html"></a>
                 <img src="./img/peliculas/el lobo.jpeg" alt="El lobo de wall street">
                 <h3>El lobo de wall street</h3>
                 <p>Fecha de estreno: 2 de enero de 2014</p>
             </article>
 
 
-            <article><a href="./detalle-movie.html"></a>
+            <article class="article-home"><a href="./detalle-movie.html"></a>
                 <img src="./img/peliculas/oppenhaimer.jpeg" alt="oppenhaimer">
                 <h3>Oppenhaimer</h3>
                 <p>Fecha de estreno: 20 de julio de 2023</p>
             </article>
 
-            <article><a href="./detalle-movie.html"></a>
+            <article class="article-home"><a href="./detalle-movie.html"></a>
                 <img src="./img/peliculas/son como ninos.jpeg" alt="Son como niños">
                 <h3>Son como niños</h3>
                 <p>Fecha de estreno: 20 de julio de 2023</p>
             </article>
 
-            <article><a href="./detalle-movie.html"></a>
+            <article class="article-home"><a href="./detalle-movie.html"></a>
                 <img src="./img/peliculas/un espia y medio.jpeg" alt="Un espia y medio">
                 <h3>Un espía y medio</h3>
                 <p>Fecha de estreno: 18 de agosto de 2016</p>
             </article>
         </section>
 
-        <section>
-            <h2>Series</h2>
-            <article><a href="./detalle-serie.html"></a>
+        <section class="section-home">
+            <h2 class="titulo-section">Series</h2>
+            <article class="article-home"><a href="./detalle-serie.html"></a>
                 <img src="./img/series/ el encargado.jpeg" alt="El encargado">
                 <h3>El encargado</h3>
                 <p>Fecha de estreno: 26 de octubre de 2022</p>
             </article>
 
-            <article><a href="./detalle-serie.html"></a>
+            <article class="article-home"><a href="./detalle-serie.html"></a>
                 <img src="./img/series/elite.jpeg" alt="Elite">
                 <h3>Elite</h3>
                 <p>Fecha de estreno: 5 de octubre de 2018</p>
             </article>
 
-            <article><a href="./detalle-serie.html"></a>
+            <article class="article-home"><a href="./detalle-serie.html"></a>
                 <img src="./img/series/outer banks.jpeg" alt="Outer banks">
                 <h3>Outer banks</h3>
                 <p>Fecha de estreno: 15 de abril de 2020</p>
             </article>
 
-            <article><a href="./detalle-serie.html"></a>
+            <article class="article-home"><a href="./detalle-serie.html"></a>
                 <img src="./img/series/sex education.jpeg" alt="Sex education">
                 <h3>Sex education</h3>
                 <p>Fecha de estreno: 11 de enero de 2019</p>
             </article>
 
-            <article><a href="./detalle-serie.html"></a>
+            <article class="article-home"><a href="./detalle-serie.html"></a>
                 <img src="./img/series/suits.jpeg" alt="Suits">
                 <h3>Suits</h3>
                 <p>Fecha de estreno: 23 de junio de 2011</p>
             </article>
         </section>
 
-        <section>
-            <h2>Películas populares</h2>
-            <article><a href="./detalle-movie.html"></a>
+        <section class="section-home">
+            <h2 class="titulo-section">Películas populares</h2>
+            <article class="article-home"><a href="./detalle-movie.html"></a>
                 <img src="./img/peliculas_populares/cars.jpeg" alt="Cars">
                 <h3>Cars</h3>
                 <p>Fecha de estreno: 29 de junio de 2006</p>
             </article>
 
-            <article><a href="./detalle-movie.html"></a>
+            <article class="article-home"><a href="./detalle-movie.html"></a>
                 <img src="./img/peliculas_populares/el codigo enigma.jpeg" alt="El código enigma">
                 <h3>El código enigma</h3>
                 <p>Fecha de estreno: 28 de septiembre de 2014</p>
             </article>
 
-            <article><a href="./detalle-movie.html"></a>
+            <article class="article-home"><a href="./detalle-movie.html"></a>
                 <img src="./img/peliculas_populares/harry potter.jpeg" alt="Harry potter">
                 <h3>Harry potter</h3>
                 <p>Fecha de estreno: 29 de noviembre de 2001</p>
             </article>
 
-            <article><a href="./detalle-movie.html"></a>
+            <article class="article-home"><a href="./detalle-movie.html"></a>
                 <img src="./img/peliculas_populares/jefe en panales.jpeg" alt="Jefe en pañales">
                 <h3>Jefe en pañales</h3>
                 <p>Fecha de estreno: 13 de abril de 2017</p>
             </article>
 
-            <article><a href="./detalle-movie.html"></a>
+            <article class="article-home"><a href="./detalle-movie.html"></a>
                 <img src="./img/peliculas_populares/juego de gemelas.jpeg" alt="Juego de gemelas">
                 <h3>Jefe en pañales</h3>
                 <p>Fecha de estreno: 28 de enero de 1999</p>
