--- a/favorite.html
+++ b/favorite.html
@@ -23,16 +23,18 @@
         </nav>
     </header>
     
+    <section class="favorite-section">
+        <h1>FAVORITOS</h1>
+        <ul>
+            <li>Cars</li>
+            <li>El encargado</li>
+            <li>Caracortada</li>
+            <li>Élite</li>
+            <li>Son como niños</li>
+        </ul>
 
-<h1>FAVORITOS</h1>
-<ul>
-    <li>cars</li>
-    <li>el encargado</li>
-    <li>caracortada</li>
-    <li>elite</li>
-    <li>son como niños</li>
-</ul>
-<section>
+    </section>
+    <section class="favorite-section">
         <img src="./img/peliculas/alpachino.jpeg" alt="Imagen de Alpachino">
         <H2> Caracortada </H2>
         <p>Calificación</p>
@@ -40,8 +42,7 @@
         <p>En su ascenso en el negocio del narcotráfico de Miami, un gánster cubano se sumerge en un modulo de adicción, obsesión y crueldad y paga un alto precio </p>
         <p>Genero: Acción</p>
         <a href="#">Favoritos</a>
-  
-</section>      
+    </section>      
     <footer>
         <ul class="ul-footer">
             <li class="footerlist">Beltrán Caceras</li>
