--- a/generos.html
+++ b/generos.html
@@ -23,22 +23,21 @@
         </nav>
     </header>
 
-    <section>
-        <h2>Peliculas</h2>
-        <ul>
-            <li><a href="./detalle-movie.html"></a>Accion</li>
-            <li><a href="./detalle-movie.html"></a>Terror</li>
-            <li><a href="./detalle-movie.html"></a>Comedia</li>
+    <section class="genero-section">
+        <h2>Películas</h2>
+        <ul class="genero-list">
+            <li><a href="./detalle-movie.html">Acción</a></li>
+            <li><a href="./detalle-movie.html">Terror</a></li>
+            <li><a href="./detalle-movie.html">Comedia</a></li>
         </ul>
     </section>
 
-    <section>
-        <h2>series</h2>
-        <ul>
-            <li><a href="./detalle-serie.html"></a>Accion</li>
-            <li><a href="./detalle-serie.html"></a>Terror</li>
-            <li><a href="./detalle-serie.html"></a>Comedia</li>
-            
+    <section class="genero-section">
+        <h2>Series</h2>
+        <ul class="genero-list">
+            <li><a href="./detalle-serie.html">Acción</a></li>
+            <li><a href="./detalle-serie.html">Terror</a></li>
+            <li><a href="./detalle-serie.html">Comedia</a></li>
         </ul>
     </section>
 
