--- a/favorite.html
+++ b/favorite.html
@@ -22,9 +22,8 @@
             </ul>
         </nav>
     </header>
-    
+    <h1>FAVORITOS</h1>
     <section class="favorite-section">
-        <h1>FAVORITOS</h1>
         <ul>
             <li>Cars</li>
             <li>El encargado</li>
@@ -32,16 +31,17 @@
             <li>Élite</li>
             <li>Son como niños</li>
         </ul>
-
     </section>
     <section class="favorite-section">
-        <img src="./img/peliculas/alpachino.jpeg" alt="Imagen de Alpachino">
-        <H2> Caracortada </H2>
-        <p>Calificación</p>
-        <p> 1982 2h 49 min</p>
-        <p>En su ascenso en el negocio del narcotráfico de Miami, un gánster cubano se sumerge en un modulo de adicción, obsesión y crueldad y paga un alto precio </p>
-        <p>Genero: Acción</p>
-        <a href="#">Favoritos</a>
+        <article>
+            <h2>Caracortada</h2>
+            <img src="./img/peliculas/alpachino.jpeg" alt="Imagen de Alpachino">
+            <p>Calificación</p>
+            <p> 1982 2h 49 min</p>
+            <p>En su ascenso en el negocio del narcotráfico de Miami, un gánster cubano se sumerge en un modulo de adicción, obsesión y crueldad y paga un alto precio </p>
+            <p>Genero: Acción</p>
+            <a href="#">Favoritos</a>
+        </article>
     </section>      
     <footer>
         <ul class="ul-footer">
