mejore el html y el css del index, favoritos, y de todos los detalles

--- a/detalle-movie.html
+++ b/detalle-movie.html
@@ -23,7 +23,7 @@
             </ul>
         </nav>
     </header>
-    <section> 
+    <section class="section-detalle-movie"> 
         <article>
             <h2>Caracortada</h2>
             <img src="./img/peliculas/alpachino.jpeg" alt="Imagen de Alpachino">
