--- a/detalle-generos.html
+++ b/detalle-generos.html
@@ -26,7 +26,7 @@
     
     <h1> Películas de Acción </h1>
     
-    <section style="display:flex;">
+    <section class="section-detalle-generos">
         <article>
             <h2>Oppenhaimer</h2>
             <img src="./img/peliculas/oppenhaimer.jpeg" alt="Imagen de Oppenhaimer">
