--- a/detalle-serie.html
+++ b/detalle-serie.html
@@ -23,12 +23,12 @@
             </ul>
         </nav>
     </header>
-    <section> 
+    <section class="section-detalle-serie"> 
         <article>
             <h2>El Encargado</h2>
             <img src="./img/series/ el encargado.jpeg" alt="Imagen del Encargado">
             <p>Calificación</p>
-            <p>2022 11 capitulos de 30 min</p>
+            <p>Estreno: 26 de octubre de 2022</p>
             <p>'El encargado' es una comedia dramática que narra con ironía y humor las aventuras de Eliseo, que hace uso y abuso de su poder de vigilancia. El edificio donde trabaja tiene dinámicas específicas que él maneja a la perfección, además de saber todo sobre quienes habitan el lugar. </p>
             <p>Genero: Comedia</p>
             <a href="#">Favoritos</a>
