--- a/detalle-generos.html
+++ b/detalle-generos.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <img id="logotheSS" src="./img/setflix.png" alt="The stream setflix">
+            <img class="logotheSS" src="./img/setflix.png" alt="The stream setflix">
 
             <form class="formulario" action="search-results.html" method="get">
                 <input type="text" name="buscar" id="" value="" placeholder="Buscar...">
@@ -26,26 +26,26 @@
         </nav>
     </header>
     
-    <h1> Películas de Acción </h1>
+    <h1 class="tit-detalle-genero"> Películas de Acción </h1>
     
     <section class="section-detalle-generos">
-        <article>
+        <article class="art-detalle-genero">
             <h2>Oppenhaimer</h2>
             <img src="./img/peliculas/oppenhaimer.jpeg" alt="Imagen de Oppenhaimer">
         </article>
-        <article>     
+        <article  class="art-detalle-genero">     
                 <h2>Un espía y medio</h2>
                 <img src="./img/peliculas/un espia y medio.jpeg" alt="Imagen de un Espia y Medio">
         </article>
-        <article>
+        <article  class="art-detalle-genero">
             <h2>El lobo de Wallstreet</h2>
             <img src="./img/peliculas/el lobo.jpeg" alt="Imagen de el Lobo">
         </article>
-        <article>
+        <article  class="art-detalle-genero">
             <h2>Caracortada</h2>
             <img src="./img/peliculas/alpachino.jpeg" alt="Imagen de Alpachino">
         </article>
-        <article>
+        <article  class="art-detalle-genero">
             <h2>Son como niños</h2>
             <img src="./img/peliculas/son como ninos.jpeg" alt="Imagen de Son como niños">
         </article>
