--- a/detalle-serie.html
+++ b/detalle-serie.html
@@ -12,7 +12,7 @@
     
     <header>
         <nav>
-            <img id="logotheSS" src="./img/setflix.png" alt="The stream setflix">
+            <img class="logotheSS" src="./img/setflix.png" alt="The stream setflix">
 
             <form class="formulario" action="search-results.html" method="get">
                 <input type="text" name="buscar" id="" value="" placeholder="Buscar...">
@@ -26,7 +26,7 @@
         </nav>
     </header>
     <section class="section-detalle-serie"> 
-        <article>
+        <article class = "article-detalle-serie">
             <h2>El Encargado</h2>
             <img src="./img/series/ el encargado.jpeg" alt="Imagen del Encargado">
             <p>Calificación</p>
