--- a/generos.html
+++ b/generos.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <img id="logotheSS" src="./img/setflix.png" alt="The stream setflix">
+            <img class="logotheSS" src="./img/setflix.png" alt="The stream setflix">
 
             <form class="formulario" action="search-results.html" method="get">
                 <input type="text" name="buscar" id="" value="" placeholder="Buscar...">
@@ -28,18 +28,18 @@
     <section class="genero-section">
         <h2>Películas</h2>
         <ul class="genero-list">
-            <li><a href="./detalle-movie.html">Acción</a></li>
-            <li><a href="./detalle-movie.html">Terror</a></li>
-            <li><a href="./detalle-movie.html">Comedia</a></li>
+            <li><a href="./detalle-generos.html">Acción</a></li>
+            <li><a href="./detalle-generos.html">Terror</a></li>
+            <li><a href="./detalle-generos.html">Comedia</a></li>
         </ul>
     </section>
 
     <section class="genero-section">
         <h2>Series</h2>
         <ul class="genero-list">
-            <li><a href="./detalle-serie.html">Acción</a></li>
-            <li><a href="./detalle-serie.html">Terror</a></li>
-            <li><a href="./detalle-serie.html">Comedia</a></li>
+            <li><a href="./detalle-generos.html">Acción</a></li>
+            <li><a href="./detalle-generos.html">Terror</a></li>
+            <li><a href="./detalle-generos.html">Comedia</a></li>
         </ul>
     </section>
 
