--- a/detalle-movie.html
+++ b/detalle-movie.html
@@ -12,7 +12,7 @@
     
     <header>
         <nav>
-            <img id="logotheSS" src="./img/setflix.png" alt="The stream setflix">
+            <img class="logotheSS" src="./img/setflix.png" alt="The stream setflix">
 
             <form class="formulario" action="search-results.html" method="get">
                 <input type="text" name="buscar" id="" value="" placeholder="Buscar...">
@@ -26,7 +26,7 @@
         </nav>
     </header>
     <section class="section-detalle-movie"> 
-        <article>
+        <article class="article-detalle-movie">
             <h2>Caracortada</h2>
             <img src="./img/peliculas/alpachino.jpeg" alt="Imagen de Alpachino">
             <p>Calificación</p>
