--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     
     <header>
         <nav>
-            <img id="logotheSS" src="./img/setflix.png" alt="The stream setflix">
-
+            <img class="logotheSS" src="./img/setflix.png" alt="The stream setflix">
+            
             <form class="formulario" action="search-results.html" method="get">
                 <input type="text" name="buscar" id="" value="" placeholder="Buscar...">
                 <button type="submit">Buscar</button>
