--- a/search-results.html
+++ b/search-results.html
@@ -7,22 +7,24 @@
     <link rel="stylesheet" href="./css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
-    <header>
-        <nav>
-            <img class="logotheSS" src="./img/setflix.png" alt="The stream setflix">
 
-            <form class="formulario" action="search-results.html" method="get">
-                <input type="text" name="buscar" id="" value="" placeholder="Buscar...">
-                <button type="submit">Buscar</button>
-            </form>
-            <ul>
-                <li><a href="./index.html">HOME</a></li>
-                <li><a href="./favorite.html">FAVORITOS</a></li>
-                <li><a href="./generos.html">GENEROS</a></li>
-            </ul>
-        </nav>
-    </header>
+<header>
+    <nav>
+        <img class="logotheSS" src="./img/setflix.png" alt="The stream setflix">
+
+        <form class="formulario" action="search-results.html" method="get">
+            <input type="text" name="buscar" id="" value="" placeholder="Buscar...">
+            <button type="submit">Buscar</button>
+        </form>
+        <ul>
+            <li><a href="./index.html">HOME</a></li>
+            <li><a href="./favorite.html">FAVORITOS</a></li>
+            <li><a href="./generos.html">GENEROS</a></li>
+        </ul>
+    </nav>
+</header>
+
+<body>
 <div class="padre-articulos-search">
     <h2 class="titulo-section-search">Películas buscadas</h2>
     <section class="section-search">
@@ -124,6 +126,7 @@
         </article>
     </section>
 </div>
+</body>
 
 <footer>
     <ul class="ul-footer">
@@ -132,4 +135,4 @@
         <li class="footerlist">Joaquin Rosas Zuiani</li>
     </ul>
 </footer>
-</body>
+</html>
