modificaciones para empexar con js y linkeo de js

--- a/detalle-serie.html
+++ b/detalle-serie.html
@@ -44,5 +44,6 @@
             <li class="footerlist">Joaquin Rosas Zuiani</li>
         </ul>
     </footer>
+    <script src="js/detalle-serie.js"></script>
 </body>
 </html>
