--- a/generos.html
+++ b/generos.html
@@ -50,5 +50,6 @@
             <li class="footerlist">Joaquin Rosas Zuiani</li>
         </ul>
     </footer>
+    <script src="js/genero.js"></script>
 </body>
 </html>
