--- a/detalle-generos.html
+++ b/detalle-generos.html
@@ -57,5 +57,6 @@
             <li class="footerlist">Joaquin Rosas Zuiani</li>
         </ul>
     </footer>
+    <script src="./js/detail-genres.js"></script>
 </body>
 </html>
