--- a/detalle-movie.html
+++ b/detalle-movie.html
@@ -44,5 +44,6 @@
             <li class="footerlist">Joaquin Rosas Zuiani</li>
         </ul>
     </footer>
+    <script src="js/detalle-movie.js"></script>
 </body>
 </html> 
