Arreglando Html del index/search y sus js

--- a/index.html
+++ b/index.html
@@ -29,89 +29,13 @@
      <div class="padre-articulos">
         <h2 class="titulo-section">Películas</h2>
         <section class="section-home">
-            <a href="./detalle-movie.html">
-                <article class="article-home">
-                <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-                <h3>Al pachino</h3>
-                <p>Estreno: 8 de enero de 1976</p>
-                </article>
-            </a>
-
-            <a href="./detalle-movie.html">
-                <article class="article-home">
-                <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-                <h3>Al pachino</h3>
-                <p>Estreno: 8 de enero de 1976</p>
-                </article>
-            </a>
-
-            <a href="./detalle-movie.html">
-                <article class="article-home">
-                <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-                <h3>Al pachino</h3>
-                <p>Estreno: 8 de enero de 1976</p>
-                </article>
-            </a>
-
-            <a href="./detalle-movie.html">
-                <article class="article-home">
-                <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-                <h3>Al pachino</h3>
-                <p>Estreno: 8 de enero de 1976</p>
-                </article>
-            </a>
-
-            <a href="./detalle-movie.html">
-                <article class="article-home">
-                <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-                <h3>Al pachino</h3>
-                <p>Estreno: 8 de enero de 1976</p>
-                </article>
-            </a>
+            <ul class="lista-peliculas"></ul>
         </section>
             
         <h2 class="titulo-section">Series</h2>
         <section class="section-home">
-            <a href="./detalle-movie.html">
-                <article class="article-home">
-                <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-                <h3>Al pachino</h3>
-                <p>Estreno: 8 de enero de 1976</p>
-                </article>
-            </a>
-
-            <a href="./detalle-movie.html">
-                <article class="article-home">
-                <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-                <h3>Al pachino</h3>
-                <p>Estreno: 8 de enero de 1976</p>
-                </article>
-            </a>
-
-            <a href="./detalle-movie.html">
-                <article class="article-home">
-                <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-                <h3>Al pachino</h3>
-                <p>Estreno: 8 de enero de 1976</p>
-                </article>
-            </a>
-
-            <a href="./detalle-movie.html">
-                <article class="article-home">
-                <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-                <h3>Al pachino</h3>
-                <p>Estreno: 8 de enero de 1976</p>
-                </article>
-            </a>
-
-            <a href="./detalle-movie.html">
-                <article class="article-home">
-                <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-                <h3>Al pachino</h3>
-                <p>Estreno: 8 de enero de 1976</p>
-                </article>
-            </a>
-      </section>
+            <ul class="lista-series"></ul>
+        </section>
       
       <h2 class="titulo-section">Películas populares</h2>
         <section class="section-home">
@@ -122,39 +46,7 @@
                 <p>Estreno: 8 de enero de 1976</p>
                 </article>
             </a>
-
-            <a href="./detalle-movie.html">
-                <article class="article-home">
-                <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-                <h3>Al pachino</h3>
-                <p>Estreno: 8 de enero de 1976</p>
-                </article>
-            </a>
-
-            <a href="./detalle-movie.html">
-                <article class="article-home">
-                <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-                <h3>Al pachino</h3>
-                <p>Estreno: 8 de enero de 1976</p>
-                </article>
-            </a>
-
-            <a href="./detalle-movie.html">
-                <article class="article-home">
-                <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-                <h3>Al pachino</h3>
-                <p>Estreno: 8 de enero de 1976</p>
-                </article>
-            </a>
-
-            <a href="./detalle-movie.html">
-                <article class="article-home">
-                <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-                <h3>Al pachino</h3>
-                <p>Estreno: 8 de enero de 1976</p>
-                </article>
-            </a>
-         </section>
+        </section>
     </div>
    
     <footer>
