--- a/search-results.html
+++ b/search-results.html
@@ -26,134 +26,8 @@
 </header>
 
 <div class="padre-articulos-search">
-    <h2 class="titulo-section">Películas buscadas </h2>
-    <section class="section-home">
-        <a href="./detalle-movie.html">
-            <article class="article-home">
-            <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-            <h3>Al pachino</h3>
-            <p>Estreno: 8 de enero de 1976</p>
-            </article>
-        </a>
-
-        <a href="./detalle-movie.html">
-            <article class="article-home">
-            <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-            <h3>Al pachino</h3>
-            <p>Estreno: 8 de enero de 1976</p>
-            </article>
-        </a>
-
-        <a href="./detalle-movie.html">
-            <article class="article-home">
-            <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-            <h3>Al pachino</h3>
-            <p>Estreno: 8 de enero de 1976</p>
-            </article>
-        </a>
-
-        <a href="./detalle-movie.html">
-            <article class="article-home">
-            <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-            <h3>Al pachino</h3>
-            <p>Estreno: 8 de enero de 1976</p>
-            </article>
-        </a>
-
-        <a href="./detalle-movie.html">
-            <article class="article-home">
-            <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-            <h3>Al pachino</h3>
-            <p>Estreno: 8 de enero de 1976</p>
-            </article>
-        </a>
-    </section>
-        
-    <h2 class="titulo-section">Series buscadas</h2>
-    <section class="section-home">
-        <a href="./detalle-movie.html">
-            <article class="article-home">
-            <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-            <h3>Al pachino</h3>
-            <p>Estreno: 8 de enero de 1976</p>
-            </article>
-        </a>
-
-        <a href="./detalle-movie.html">
-            <article class="article-home">
-            <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-            <h3>Al pachino</h3>
-            <p>Estreno: 8 de enero de 1976</p>
-            </article>
-        </a>
-
-        <a href="./detalle-movie.html">
-            <article class="article-home">
-            <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-            <h3>Al pachino</h3>
-            <p>Estreno: 8 de enero de 1976</p>
-            </article>
-        </a>
-
-        <a href="./detalle-movie.html">
-            <article class="article-home">
-            <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-            <h3>Al pachino</h3>
-            <p>Estreno: 8 de enero de 1976</p>
-            </article>
-        </a>
-
-        <a href="./detalle-movie.html">
-            <article class="article-home">
-            <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-            <h3>Al pachino</h3>
-            <p>Estreno: 8 de enero de 1976</p>
-            </article>
-        </a>
-  </section>
-  
-  <h2 class="titulo-section">Películas populares buscada </h2>
-    <section class="section-home">
-        <a href="./detalle-movie.html">
-            <article class="article-home">
-            <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-            <h3>Al pachino</h3>
-            <p>Estreno: 8 de enero de 1976</p>
-            </article>
-        </a>
-
-        <a href="./detalle-movie.html">
-            <article class="article-home">
-            <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-            <h3>Al pachino</h3>
-            <p>Estreno: 8 de enero de 1976</p>
-            </article>
-        </a>
-
-        <a href="./detalle-movie.html">
-            <article class="article-home">
-            <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-            <h3>Al pachino</h3>
-            <p>Estreno: 8 de enero de 1976</p>
-            </article>
-        </a>
-
-        <a href="./detalle-movie.html">
-            <article class="article-home">
-            <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-            <h3>Al pachino</h3>
-            <p>Estreno: 8 de enero de 1976</p>
-            </article>
-        </a>
-
-        <a href="./detalle-movie.html">
-            <article class="article-home">
-            <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-            <h3>Al pachino</h3>
-            <p>Estreno: 8 de enero de 1976</p>
-            </article>
-        </a>
-     </section>
+    <h2 class="titulo-busqueda">Resultados de busqueda para : </h2>
+    <section class="resultados"></section>
 </div>
 
 <footer>
