Se agrego logo en el footer

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <img class="logotheSS" src="./img/setflix.png" alt="The stream setflix">
+            <img class="logotheSS" src="./img/logos/setflix.png" alt="The stream setflix">
             
             <form class="formulario" action="search-results.html" method="get">
                 <input type="text" name="buscar" id="" value="" placeholder="Buscar...">
@@ -50,7 +50,8 @@
     </div>
    
     <footer>
-        <ul class="ul-footer">
+        <img class = "logo-api" src=".//img/logos/tmdblogo.svg" alt="Logo de Api">
+        <ul class="ul-footer"> 
             <li class="footerlist">Beltrán Caceras</li>
             <li class="footerlist">Mariano Vila</li>
             <li class="footerlist">Joaquin Rosas Zuiani</li>
