enlace la url del index

--- a/index.html
+++ b/index.html
@@ -39,13 +39,7 @@
       
       <h2 class="titulo-section">Películas populares</h2>
         <section class="section-home">
-            <a href="./detalle-movie.html">
-                <article class="article-home">
-                <img src="./img/peliculas/alpachino.jpeg" alt="Al pachino">
-                <h3>Al pachino</h3>
-                <p>Estreno: 8 de enero de 1976</p>
-                </article>
-            </a>
+            <ul class="lista-peliculas-populares"></ul>
         </section>
     </div>
    
