Modificaciones en html y el logo en todos los footer

--- a/detalle-generos.html
+++ b/detalle-generos.html
@@ -25,33 +25,14 @@
         </nav>
     </header>
    
-    <h1 class="tit-detalle-genero"> Películas de Acción </h1>
+   
     
-    <section class="section-detalle-generos">
-        <article class="art-detalle-genero">
-            <h2>Oppenhaimer</h2>
-            <img src="./img/peliculas/oppenhaimer.jpeg" alt="Imagen de Oppenhaimer">
-        </article>
-        <article  class="art-detalle-genero">     
-                <h2>Un espía y medio</h2>
-                <img src="./img/peliculas/un espia y medio.jpeg" alt="Imagen de un Espia y Medio">
-        </article>
-        <article  class="art-detalle-genero">
-            <h2>El lobo de Wallstreet</h2>
-            <img src="./img/peliculas/el lobo.jpeg" alt="Imagen de el Lobo">
-        </article>
-        <article  class="art-detalle-genero">
-            <h2>Caracortada</h2>
-            <img src="./img/peliculas/alpachino.jpeg" alt="Imagen de Alpachino">
-        </article>
-        <article  class="art-detalle-genero">
-            <h2>Son como niños</h2>
-            <img src="./img/peliculas/son como ninos.jpeg" alt="Imagen de Son como niños">
-        </article>
-    </section>
-
+    <section class="movie-detalle-generos"></section>
+    <section class="serie-detalle-generos"></section>
+    
     <footer>
-        <ul class="ul-footer">
+        <img class = "logo-api" src=".//img/logos/tmdblogo.svg" alt="Logo de Api">
+        <ul class="ul-footer"> 
             <li class="footerlist">Beltrán Caceras</li>
             <li class="footerlist">Mariano Vila</li>
             <li class="footerlist">Joaquin Rosas Zuiani</li>
