--- a/detalle-movie.html
+++ b/detalle-movie.html
@@ -25,20 +25,11 @@
         </nav>
     </header>
 
-    <section class="section-detalle-movie"> 
-        <article class="article-detalle-movie">
-            <h2>Caracortada</h2>
-            <img src="./img/peliculas/alpachino.jpeg" alt="Imagen de Alpachino">
-            <p>Calificación</p>
-            <p> 1982 2h 49 min</p>
-            <p>En su ascenso en el negocio del narcotráfico de Miami, un gánster cubano se sumerge en un modulo de adicción, obsesión y crueldad y paga un alto precio </p>
-            <p>Genero: Acción</p>
-            <a href="#">Favoritos</a>
-        </article>
-    </section>
+    <section class="section-detalle-movie"></section>
 
     <footer>
-        <ul class="ul-footer">
+        <img class = "logo-api" src=".//img/logos/tmdblogo.svg" alt="Logo de Api">
+        <ul class="ul-footer"> 
             <li class="footerlist">Beltrán Caceras</li>
             <li class="footerlist">Mariano Vila</li>
             <li class="footerlist">Joaquin Rosas Zuiani</li>
