--- a/detalle-serie.html
+++ b/detalle-serie.html
@@ -25,20 +25,10 @@
         </nav>
     </header>
     
-    <section class="section-detalle-serie"> 
-        <article class = "article-detalle-serie">
-            <h2>El Encargado</h2>
-            <img src="./img/series/ el encargado.jpeg" alt="Imagen del Encargado">
-            <p>Calificación</p>
-            <p>Estreno: 26 de octubre de 2022</p>
-            <p>'El encargado' es una comedia dramática que narra con ironía y humor las aventuras de Eliseo, que hace uso y abuso de su poder de vigilancia. El edificio donde trabaja tiene dinámicas específicas que él maneja a la perfección, además de saber todo sobre quienes habitan el lugar. </p>
-            <p>Genero: Comedia</p>
-            <a href="#">Favoritos</a>
-        </article>
-    </section>
-
+    <section class="section-detalle-serie"></section>
     <footer>
-        <ul class="ul-footer">
+        <img class = "logo-api" src=".//img/logos/tmdblogo.svg" alt="Logo de Api">
+        <ul class="ul-footer"> 
             <li class="footerlist">Beltrán Caceras</li>
             <li class="footerlist">Mariano Vila</li>
             <li class="footerlist">Joaquin Rosas Zuiani</li>
