--- a/generos.html
+++ b/generos.html
@@ -27,24 +27,11 @@
 
     <section class="genero-section">
         <h2>Películas</h2>
-        <ul class="genero-list">
-            <li><a href="./detalle-generos.html">Acción</a></li>
-            <li><a href="./detalle-generos.html">Terror</a></li>
-            <li><a href="./detalle-generos.html">Comedia</a></li>
-        </ul>
     </section>
 
-    <section class="genero-section">
-        <h2>Series</h2>
-        <ul class="genero-list">
-            <li><a href="./detalle-generos.html">Acción</a></li>
-            <li><a href="./detalle-generos.html">Terror</a></li>
-            <li><a href="./detalle-generos.html">Comedia</a></li>
-        </ul>
-    </section>  
-    
     <footer>
-        <ul class="ul-footer">
+        <img class = "logo-api" src=".//img/logos/tmdblogo.svg" alt="Logo de Api">
+        <ul class="ul-footer"> 
             <li class="footerlist">Beltrán Caceras</li>
             <li class="footerlist">Mariano Vila</li>
             <li class="footerlist">Joaquin Rosas Zuiani</li>
