--- a/favorite.html
+++ b/favorite.html
@@ -157,7 +157,8 @@
     </div> 
     
     <footer>
-        <ul class="ul-footer">
+        <img class = "logo-api" src=".//img/logos/tmdblogo.svg" alt="Logo de Api">
+        <ul class="ul-footer"> 
             <li class="footerlist">Beltrán Caceras</li>
             <li class="footerlist">Mariano Vila</li>
             <li class="footerlist">Joaquin Rosas Zuiani</li>
