--- a/search-results.html
+++ b/search-results.html
@@ -29,9 +29,9 @@
     <h2 class="titulo-busqueda">Resultados de busqueda para : </h2>
     <section class="resultados"></section>
 </div>
-
 <footer>
-    <ul class="ul-footer">
+    <img class = "logo-api" src=".//img/logos/tmdblogo.svg" alt="Logo de Api">
+    <ul class="ul-footer"> 
         <li class="footerlist">Beltrán Caceras</li>
         <li class="footerlist">Mariano Vila</li>
         <li class="footerlist">Joaquin Rosas Zuiani</li>
