--- a/detalle-serie.html
+++ b/detalle-serie.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <img class="logotheSS" src="./img/setflix.png" alt="The stream setflix">
+            <img class="logotheSS" src="./img/logos/setflix.png" alt="The stream setflix">
     
             <form class="formulario" action="search-results.html" method="get">
                 <input type="text" name="buscar" id="" value="" placeholder="Buscar...">
