hice el js de genero

--- a/detalle-generos.html
+++ b/detalle-generos.html
@@ -38,6 +38,6 @@
             <li class="footerlist">Joaquin Rosas Zuiani</li>
         </ul>
     </footer>
-    <script src="./js/detail-genres.js"></script>
+    <script src="./js/detalle-generos.js"></script>
 </body>
 </html>
